--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "dcbot",
-  "version": "1.0.0",
-  "description": "My little dc bot",
-  "main": "index",
-  "author": "me I and myself",
-  "license": "none lol",
-  "dependencies": {
-    "@discordjs/opus": "^0.4.0",
-    "discord.js": "^12.5.1",
-    "ffmpeg-static": "^4.2.8",
-    "ytdl-core-discord": "^1.2.5",
-    "ytsearcher": "^1.2.3"
-  }
+	"name": "dcbot",
+	"version": "1.0.0",
+	"description": "My little dc bot",
+	"main": "index",
+	"author": "me I and myself",
+	"license": "none",
+	"dependencies": {
+		"@discordjs/opus": "^0.4.0",
+		"bufferutil": "^4.0.3",
+		"discord.js": "^12.5.1",
+		"erlpack": "github:discord/erlpack",
+		"sodium": "^3.0.2",
+		"utf-8-validate": "^5.0.4",
+		"ytdl-core-discord": "^1.2.5",
+		"ytsearcher": "^1.2.3",
+		"zlib-sync": "^0.1.7"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.35"
+	}
 }
