--- a/package.json
+++ b/package.json
@@ -6,17 +6,11 @@
 	"author": "me I and myself",
 	"license": "none",
 	"dependencies": {
-		"@discordjs/opus": "^0.4.0",
-		"bufferutil": "^4.0.3",
+		"@discordjs/opus": "^0.5.0",
 		"discord.js": "^12.5.1",
-		"erlpack": "github:discord/erlpack",
-		"sodium": "^3.0.2",
-		"utf-8-validate": "^5.0.4",
+		"ffmpeg-static": "^4.2.8",
+		"libsodium-wrappers": "^0.7.9",
 		"ytdl-core-discord": "^1.2.5",
-		"ytsearcher": "^1.2.3",
-		"zlib-sync": "^0.1.7"
-	},
-	"devDependencies": {
-		"@types/node": "^14.14.35"
+		"ytsearcher": "^1.2.3"
 	}
 }
