--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
 	"license": "none",
 	"dependencies": {
 		"@discordjs/opus": "^0.5.0",
+		"canvas": "^2.7.0",
 		"discord.js": "^12.5.1",
-		"ffmpeg-static": "^4.2.8",
-		"libsodium-wrappers": "^0.7.9",
-		"ytdl-core-discord": "^1.2.5",
+		"tweetnacl": "^1.0.3",
+		"ytdl-core": "^4.5.0",
+		"ytdl-core-discord": "^1.3.0",
 		"ytsearcher": "^1.2.3"
 	}
 }
